* Fix regression with memoryviews
* Fix hasattr/getattr of vector classes for invalid attributes
* Allow passing a long to methods accepting an int
* Fix crash when passing None to Filename constructor
* MouseWatcherGroup was erroneously not exposed in 1.9.0
* ShowBase no longer unmounts VFS when shutting down
* No longer requires setting PATH to import panda3d.*
* Fix WebcamVideo/MicrophoneAudio.getOptions() methods

Changes relating to the OpenGL renderer:
* Various performance improvements
* Fix point/line thickness setting
* Improve GLSL error reporting
* Fix Intel driver issues, particularly with geometry shaders
* Add more error checking for parameter types
* Integer shader inputs were not being converted to float properly
* Fix crash passing an undersized array to a GLSL shader input
* p3d_ColorScale et al may now be declared as vec3
* Fix flickering when using trans_model_to_apiview in Cg
* Support wireframe and point rendering modes in OpenGL ES
* Fix issue with model disappearing in rare cases with GLSL
* Fix ColorWriteAttrib not working as it should
* Allow deactivating PStats collectors for GPU timers
* Memory residency of graphics buffers now tracked by PStats
* Allow changing OpenGL coordinate system with gl-coordinate-system

Fixes for libRocket integration:
* libRocket did not work on Mac OS X in 1.9.0
* Fix inconsistent behavior with non-power-of-2 textures in rocket
* Use model-path for finding libRocket assets
* Add missing keys to libRocket keymap
* libRocket elements showed up white in tinydisplay

New features:
* Add -L (lighting) and -P (graphics pipe) pview options
* Add M_confined mouse mode that keeps cursor in window
* Add sample program demonstrating mouse modes
* bam2egg supports collision sphere and plane solids
* p3d_TransformTable GLSL input backported from 1.10 branch
* Add openal-device setting for selecting OpenAL audio output
* Add limited modification timestamp tracking for Ramdisk mounts
* Support for Autodesk Maya 2016
